# HCF_bibliotecas

./: CMakeLists.txt
Recursos/: DHT22.lnk  HC-SR04.lnk  RC522.lnk
components/HCF_ADC/: README.md
components/HCF_BT/: CMakeLists.txt  HCF_BT.c  HCF_BT.h  README.md
components/HCF_DHT/: CMakeLists.txt  HCF_DHT.c  HCF_DHT.h  README.md
components/HCF_IOTEC/: HCF_IOTEC.c  README.md
components/HCF_LCD/: HCF_LCD.c  README.md
components/HCF_MP/: HCF_MP.c  HCF_MP.h  README.md
components/HCF_RFID/: CMakeLists.txt  HCF_RFID.h  README.md
components/HCF_RS485/: CMakeLists.txt  HCF_RS485.h  README.md
components/HCF_RTC/: Novas.txt  README.md
components/HCF_SOFT/: HCF_SOFT.c  HCF_SOFT.h  README.md
components/HCF_ULTRA/: CMakeLists.txt  HCF_ULTRA.c  HCF_ULTRA.h  README.md
components/HCF_WIFI/: CMakeLists.txt  HCF_WIFI.c  README.md
components/HCF_WNOLOGY/: CMakeLists.txt  Exemplo_WNOLOGY.c  HCF_WNOLOGY.c  HCF_WNOLOGY.h  README.md
main/: CMakeLists.txt  app_main copy.c  app_main.c
